--- a/A05/layout.css
+++ b/A05/layout.css
@@ -77,7 +77,6 @@ a:active {
   width: 75%;
   border-style: solid;
   border-color: slategrey;
-  padding: 1%;
   min-height: 100%;
 }
 
@@ -93,7 +92,7 @@ a:active {
 #extra {
   background-image: url("http://i955.photobucket.com/albums/ae36/koneko22/cherryBlossoms_zpsrv9sh0nj.jpg");
   background-size: 100%;
-  height: 50%;
-  border-style: solid;
-  border-color: slategrey;
+  height: 100%;
+  width: 100%;
+  display: inline-block;
 }
